添加了卡片的动画效果和上一篇下一篇的标签显示

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ stylesheets:
 - /libs/awesome/css/font-awesome.min.css
 - /libs/materialize/css/materialize.min.css
 - /libs/aos/aos.css
+- /libs/animate/animate.min.css
 - /css/matery.css
 
 # scripts loaded in the end of the body
