去掉主题设置和切换的页面，增加国际化的支持

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-
-# html lang
-language: en
-
 # main menu navigation
 menu:
-  首页: /
-  标签: /tags
-  归档: /archives
+  Index: /
+  Tags: /tags
+  Archives: /archives
+
+dream: The best preparation for tomorrow is doing your best today.
 
 # Miscelaneous
 favicon: /favicon.png
