--- a/_config.yml
+++ b/_config.yml
@@ -32,23 +32,49 @@ profile:
   introduction: If you wish to succeed, you should use persistence as your good friend, experience as your reference, prudence as your brother and hope as your sentry.
 
 # config my projects informations in about page.
-# If you don't want to display this `My Projects` content, you can delete this configuration.
+# If you don't want to display this `My Projects` content, you can deactivate or delete this configuration.
 myProjects:
-  hexo-theme-matery:
-    icon: fa-github
-    iconBackground: 'linear-gradient(to bottom right, #1cf196 0%, #36a6bf 100%)'
-    url: http://github.com/blinkfox/hexo-theme-matery
-    desc: This is a Hexo blog theme with 'Material Design' and responsive design.
-  zealt:
-      icon: fa-code
-      iconBackground: 'linear-gradient(to bottom right, #fc5f3c 0%, #ff55d3 100%)'
-      url: https://github.com/blinkfox/zealot
-      desc: 一个轻量级的SQL和参数动态生成工具库
-  typora-vue-theme:
-      icon: fa-area-chart
-      iconBackground: 'linear-gradient(to bottom right, #32d6fb 0%, #5558ed 100%)'
-      url: https://github.com/blinkfox/typora-vue-theme
-      desc: This is a typora theme inspired by Vue document style.
+  enable: true
+  data:
+    hexo-theme-matery:
+      icon: fa-github
+      iconBackground: 'linear-gradient(to bottom right, #1cf196 0%, #36a6bf 100%)'
+      url: http://github.com/blinkfox/hexo-theme-matery
+      desc: This is a Hexo blog theme with 'Material Design' and responsive design.
+    zealt:
+        icon: fa-code
+        iconBackground: 'linear-gradient(to bottom right, #fc5f3c 0%, #ff55d3 100%)'
+        url: https://github.com/blinkfox/zealot
+        desc: 一个轻量级的SQL和参数动态生成工具库
+    typora-vue-theme:
+        icon: fa-area-chart
+        iconBackground: 'linear-gradient(to bottom right, #32d6fb 0%, #5558ed 100%)'
+        url: https://github.com/blinkfox/typora-vue-theme
+        desc: This is a typora theme inspired by Vue document style.
+
+# config my skills informations in about page.
+# If you don't want to display this `My Skills` content, you can deactivate or delete this configuration.
+mySkills:
+  enable: true
+  data:
+    Java:
+      background: '#EC407A'
+      percent: 85%
+    JavaScript:
+      background: '#AB47BC'
+      percent: 80%
+    HTML5:
+      background: '#42A5F5'
+      percent: 80%
+    CSS:
+      background: '#26C6DA'
+      percent: 70%
+    SQL:
+      background: '#66BB6A'
+      percent: 90%
+    程序设计:
+      background: '#FFA726'
+      percent: 75%
 
 # show post-calendar
 postCalendar: true
