新增了基本的TOC功能

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ dream:
 favicon: /favicon.png
 logo: /medias/logo.png
 
+# Whether to activate the Post TOC.
+# 是否激活文章 TOC 功能.
+toc:
+  enable: false
+
 # profile in about page, including avatars, career, and personal introductions.
 # 在”关于”页面中配置个人信息，包括头像、职业和个人介绍.
 profile:
