新增了来必力评论支持

--- a/_config.yml
+++ b/_config.yml
@@ -149,6 +149,12 @@ disqus:
   enable: false
   shortname:
 
+# Livere comment configuration, the default is not activated
+# Livere 来必力评论模块的配置，默认为不激活
+livere:
+  enable: false
+  uid:
+
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
 githubLink:
