--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,9 @@ menu:
   About:
     url: /about
     icon: fa-user-circle-o
-
+  Friends:
+    url: /friends
+    icon: fa-user-circle-o
 # index page dream text,
 # 配置首页显示"梦想"的语句.
 dream:
@@ -224,3 +226,5 @@ featureImages:
 - /medias/featureimages/21.jpg
 - /medias/featureimages/22.jpg
 - /medias/featureimages/23.jpg
+
+
