新增复制博客文章内容时追加博客和作者的版权信息功能

--- a/_config.yml
+++ b/_config.yml
@@ -58,10 +58,13 @@ reward:
   wechat: /medias/reward/wechat.png
   alipay: /medias/reward/alipay.jpg
 
+# Whether to activate the copyright information of the blog and author when copying the post content.
+# minCharNumber: Approve copyright information by copying at least how many characters.
 # 是否激活复制文章时追加博客和作者的版权信息.
 copyright:
   enable: false
-  minCharNumber: 120 #至少多少个字符就追加版权信息.
+  minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
+  description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
 
 # Whether to activate the mathjax, this is a global configuration, but the post still does not open the mathjax rendering.
 # Considering that the mathjax loading is time consuming,
