--- a/_config.yml
+++ b/_config.yml
@@ -57,10 +57,6 @@ reward:
   title: 你的赏识是我前进的动力
   wechat: /medias/reward/wechat.png
   alipay: /medias/reward/alipay.jpg
-  
-# 开启网站统计，这里引入不蒜子作为统计插件
-statistics:
- enable: true
 
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
@@ -216,6 +212,11 @@ verifyPassword:
   enable: false
   promptMessage: 请输入访问本文章的密码
   errorMessage: 密码错误，将返回主页！
+
+# busuanzi(http://busuanzi.ibruce.info/) website statistics
+# 不蒜子(http://busuanzi.ibruce.info/) 网站统计
+busuanziStatistics:
+  enable: true
 
 # Add google analytics configuration
 # 添加 Google Analytics 配置
