--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,21 @@ menu:
     url: /friends
     icon: fa-address-book
 
-# index page dream text,
-# 配置首页显示"梦想"的语句.
-dream:
+# Whether to display the musics.
+# 是否在首页显示音乐.
+music:
   enable: false
-  text: The best preparation for tomorrow is doing your best today.
+  showTitle: false
+  title: 听听音乐
+  fixed: false # 开启吸底模式
+  autoplay: false # 是否自动播放
+  theme: '#42b983'
+  loop: 'all' # 音频循环播放, 可选值: 'all', 'one', 'none'
+  order: 'list' # 音频循环顺序, 可选值: 'list', 'random'
+  preload: 'auto' # 预加载，可选值: 'none', 'metadata', 'auto'
+  volume: 0.7 # 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
+  listFolded: false # 列表默认折叠
+  listMaxHeight: #列表最大高度
 
 # Whether to display the title of the recommended posts
 # 是否显示推荐文章的标题
