新增我的梦想组件

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,19 @@ menu:
     url: /friends
     icon: fa-address-book
 
+# index page dream text,
+# 配置首页显示"梦想"的语句.
+dream:
+  enable: true
+  showTitle: true
+  title: 我的梦想
+  text: 不是每个人都应该像我这样去建造一座水晶大教堂，但是每个人都应该拥有自己的梦想，设计自己的梦想，追求自己的梦想，实现自己的梦想。梦想是生命的灵魂，是心灵的灯塔，是引导人走向成功的信仰。有了崇高的梦想，只要矢志不渝地追求，梦想就会成为现实，奋斗就会变成壮举，生命就会创造奇迹。——罗伯·舒乐
+
 # Whether to display the musics.
 # 是否在首页显示音乐.
 music:
   enable: false
-  showTitle: false
+  showTitle: true
   title: 听听音乐
   fixed: false # 开启吸底模式
   autoplay: false # 是否自动播放
