--- a/_config.yml
+++ b/_config.yml
@@ -287,8 +287,8 @@ googleAnalytics:
   id:
 
 # The used front-end library can be replaced with the corresponding CDN address as needed,
-# but the corresponding version needs to be viewed in the file.
-# 使用到的前端库，可按需替换成对应的CDN地址，但需要在文件中查看到对应的版本.
+# If the specific version is not specified below, you can use the latest version.
+# 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
 libs:
   css:
     fontAwesome: /libs/awesome/css/font-awesome.min.css # V4.7.0
