将materialize的前端库改成到本地

--- a/_config.yml
+++ b/_config.yml
@@ -292,6 +292,7 @@ googleAnalytics:
 libs:
   css:
     fontAwesome: /libs/awesome/css/font-awesome.min.css # V4.7.0
+    materialize: /libs/materialize/materialize.min.css # 1.0.0
     aos: /libs/aos/aos.css
     animate: /libs/animate/animate.min.css # V3.5.1
     lightgallery: /libs/lightGallery/css/lightgallery.min.css # V1.6.11
@@ -302,6 +303,7 @@ libs:
     tocbot: /libs/tocbot/tocbot.css
   js:
     jquery: /libs/jquery/jquery-2.2.0.min.js
+    materialize: /libs/materialize/materialize.min.js # 1.0.0
     masonry: /libs/masonry/masonry.pkgd.min.js # v4.0.0
     aos: /libs/aos/aos.js
     scrollProgress: /libs/scrollprogress/scrollProgress.min.js
