首页轮播特效增强

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,15 @@ menu:
     url: /friends
     icon: fa-address-book
 
+# Index cover carousel configuration.
+# 首页封面轮播图的相关配置.
+cover:
+  showPrevNext: true # 是否显示左右切换按钮. Whether to display the left and right toggle buttons.
+  showIndicators: true # 是否显示指示器. # Whether to display the indicators
+  autoLoop: true # 是否自动轮播. Whether it is automatically rotated.
+  duration: 120 # 切换延迟时间. Switching delay time.
+  intervalTime: 5000 # 自动切换下一张的间隔时间. Automatically switch the interval of the next one.
+
 # index page dream text,
 # 配置首页显示"梦想"的语句.
 dream:
