--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,8 @@ logo: /medias/logo.png
 # including the display name of the button, the font awesome icon, and the hyperlink to the button.
 # 首页 banner 中的第二个按钮的配置，包括按钮的显示名称、font awesome图标和按钮的超链接.
 indexbtn:
-  enable: truename: Github
+  enable: true
+  name: Github
   icon: fa-github-alt
   url: https://github.com/blinkfox/hexo-theme-matery
 
