--- a/_config.yml
+++ b/_config.yml
@@ -96,9 +96,13 @@ indexbtn:
 # icon/button will not show up if you leave the corresponding socialLink empty
 # 首页 banner 中的第二行个人信息配置，留空即不启用
 socialLink:
-  qq: 123123123
-  github:
-  email: xxx@xx.xx
+  github: 
+  email: 
+  facebook: 
+  twitter: 
+  qq: 
+  weibo: 
+  zhihu: 
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
 # You can add `toc: false` to the Front-matter of a post to turn off the TOC.
