--- a/_config.yml
+++ b/_config.yml
@@ -395,3 +395,10 @@ reprint:
 daovoice: 
   enable: true
   app_id:
+  
+# Tidio online contact 
+tidio:
+  enable: false
+  public_key: 
+  right: -10px #距离右侧的距离
+  bottom: 30px #距离底部的距离
