--- a/_config.yml
+++ b/_config.yml
@@ -428,5 +428,12 @@ ribbon:
 ribbon_dynamic:
   enable: true
 
-#文章分享模块
-share: twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin  #支持顺序，可选项目为twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin
+#sharejs文章分享模块
+sharejs:
+  enable: true
+  sites: twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin  #支持顺序，可选项目为twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin
+
+#addthis文章分享模块 
+addthis:
+  enable: false
+  pubid:  #前往https://www.addthis.com/获取
