--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ socialLink:
   qq: 
   weibo: 
   zhihu: 
+  rss: true
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
 # You can add `toc: false` to the Front-matter of a post to turn off the TOC.
